<resources>
    <string name="app_name">Sangat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="help">Help</string>
    <string name="history">History</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="x">X</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="organization">Organization</string>
    <string name="passport">Passport</string>
    <string name="email">Email</string>
    <string name="sponsorship">Sponsorship</string>
    <string name="contact">Contact</string>
    <string name="add">Add</string>
</resources>
