<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="450dp"
    android:layout_height="700dp"
    android:background="@color/MaterialBlack"
    android:layout_gravity="center"



    >

    <TextView
        android:id="@+id/toshow"
        android:layout_width="413dp"
        android:layout_height="123dp"
        android:background="@color/OrangeLight"
        android:gravity="center"
        android:textColor="@color/MaterialBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152" />

    <TextView
        android:id="@+id/exitbtn"
        android:layout_width="28dp"
        android:layout_height="39dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/x"
        android:textColor="#F30000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <EditText
        android:id="@+id/name"
        android:layout_width="204dp"
        android:layout_height="32dp"
        android:background="@drawable/popupfield1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/full_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/MaterialBlack"
        android:textColorHint="#C3202020"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <EditText
        android:id="@+id/contact"
        android:layout_width="204dp"
        android:layout_height="32dp"
        android:background="@drawable/popupfield1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/contact"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/MaterialBlack"
        android:textColorHint="#C3202020"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47" />

    <EditText
        android:id="@+id/city"
        android:layout_width="204dp"
        android:layout_height="32dp"
        android:background="@drawable/popupfield1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/city"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/MaterialBlack"
        android:textColorHint="#C3202020"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591" />

    <EditText
        android:id="@+id/sponser"
        android:layout_width="204dp"
        android:layout_height="32dp"
        android:background="@drawable/popupfield1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/sponsorship"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/MaterialBlack"
        android:textColorHint="#C3202020"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778" />

    <EditText
        android:id="@+id/age"
        android:layout_width="204dp"
        android:layout_height="32dp"
        android:background="@drawable/popupfield1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/age"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/MaterialBlack"
        android:textColorHint="#C3202020"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />

    <EditText
        android:id="@+id/passport"
        android:layout_width="204dp"
        android:layout_height="32dp"
        android:background="@drawable/popupfield1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/passport"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/MaterialBlack"
        android:textColorHint="#C3202020"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529" />

    <EditText
        android:id="@+id/orgnz"
        android:layout_width="204dp"
        android:layout_height="32dp"
        android:background="@drawable/popupfield1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/organization"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/MaterialBlack"
        android:textColorHint="#C3202020"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

    <EditText
        android:id="@+id/email"
        android:layout_width="204dp"
        android:layout_height="32dp"
        android:background="@drawable/popupfield1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/MaterialBlack"
        android:textColorHint="#C3202020"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41" />

    <Button
        android:id="@+id/adduserbtn"
        android:layout_width="87dp"
        android:layout_height="32dp"
        android:background="@color/OrangeLight"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.856" />

</androidx.constraintlayout.widget.ConstraintLayout>